crates/dashboard/tests/snapshots/sql_snapshots__bucket_heatmap_sql_default_view.snap
---
source: crates/dashboard/tests/sql_snapshots.rs
assertion_line: 172
expression: "sql::bucket_heatmap_sql(\"syscall_latency\", None)"
---
SELECT timestamp,
                  h2_delta("syscall_latency:buckets",
                           LAG("syscall_latency:buckets") OVER (ORDER BY timestamp)) AS buckets
           FROM _src
           ORDER BY timestamp
