crates/dashboard/tests/snapshots/sql_snapshots__cgroup_irate_by_name_per_cgroup_fanout.snap
---
source: crates/dashboard/tests/sql_snapshots.rs
assertion_line: 121
expression: "sql::cgroup_irate_by_name(\"cgroup_cpu_usage\", CgroupSide::Individual, None,)"
---
WITH unp AS (
              UNPIVOT (SELECT timestamp, COLUMNS('^cgroup_cpu_usage(/[^:]+)?$') FROM _src)
                  ON COLUMNS('^cgroup_cpu_usage(/[^:]+)?$') INTO NAME col VALUE v
           ),
           joined AS (
              SELECT u.timestamp, idx.name, u.v
              FROM unp u JOIN _cgroup_index idx
                  ON idx.column_name = u.col AND idx.metric = 'cgroup_cpu_usage'
              WHERE idx.name IN __SELECTED_CGROUPS__
           ),
           by_name AS (
              -- Cast SUM(v) back to UBIGINT: DuckDB promotes SUM(UBIGINT)
              -- to HUGEINT to dodge u64 overflow, but `irate_lag` takes
              -- UBIGINT. Single-server cgroup sums fit u64 with room to
              -- spare (max ~1.8e19) so the explicit cast is safe.
              SELECT timestamp, name, CAST(SUM(v) AS UBIGINT) AS s
              FROM joined GROUP BY timestamp, name
           )
           SELECT timestamp::DOUBLE/1e9 AS t, name,
                  irate_lag(s,
                      LAG(s) OVER (PARTITION BY name ORDER BY timestamp),
                      timestamp - LAG(timestamp) OVER (PARTITION BY name ORDER BY timestamp)
                  ) AS v
           FROM by_name
