crates/dashboard/tests/snapshots/sql_snapshots__cgroup_ratio_by_name_two_metrics.snap
---
source: crates/dashboard/tests/sql_snapshots.rs
expression: "sql::cgroup_ratio_by_name(\"cgroup_cpu_instructions\", \"cgroup_cpu_cycles\",\nCgroupSide::Individual,)"
---
WITH n_unp AS (
              UNPIVOT (SELECT timestamp, COLUMNS('^cgroup_cpu_instructions(/[^:]+)?$') FROM _src)
                  ON COLUMNS('^cgroup_cpu_instructions(/[^:]+)?$') INTO NAME col VALUE v
           ),
           d_unp AS (
              UNPIVOT (SELECT timestamp, COLUMNS('^cgroup_cpu_cycles(/[^:]+)?$') FROM _src)
                  ON COLUMNS('^cgroup_cpu_cycles(/[^:]+)?$') INTO NAME col VALUE v
           ),
           n_join AS (
              SELECT u.timestamp, idx.name, u.v
              FROM n_unp u JOIN _cgroup_index idx
                  ON idx.column_name = u.col AND idx.metric = 'cgroup_cpu_instructions'
              WHERE idx.name IN __SELECTED_CGROUPS__
           ),
           d_join AS (
              SELECT u.timestamp, idx.name, u.v
              FROM d_unp u JOIN _cgroup_index idx
                  ON idx.column_name = u.col AND idx.metric = 'cgroup_cpu_cycles'
              WHERE idx.name IN __SELECTED_CGROUPS__
           ),
           n_by AS (SELECT timestamp, name, SUM(v) AS s FROM n_join GROUP BY timestamp, name),
           d_by AS (SELECT timestamp, name, SUM(v) AS s FROM d_join GROUP BY timestamp, name),
           n_rate AS (
              SELECT timestamp, name,
                     irate_lag(s,
                         LAG(s) OVER (PARTITION BY name ORDER BY timestamp),
                         timestamp - LAG(timestamp) OVER (PARTITION BY name ORDER BY timestamp)
                     ) AS r
              FROM n_by
           ),
           d_rate AS (
              SELECT timestamp, name,
                     irate_lag(s,
                         LAG(s) OVER (PARTITION BY name ORDER BY timestamp),
                         timestamp - LAG(timestamp) OVER (PARTITION BY name ORDER BY timestamp)
                     ) AS r
              FROM d_by
           )
           SELECT n.timestamp::DOUBLE/1e9 AS t, n.name,
                  n.r / NULLIF(d.r, 0) AS v
           FROM n_rate n JOIN d_rate d USING(timestamp, name)
