crates/dashboard/tests/snapshots/sql_snapshots__cpu_pct_total_divides_by_cpu_cores.snap
---
source: crates/dashboard/tests/sql_snapshots.rs
expression: "sql::cpu_pct_total(\"^cpu_usage/[a-z]+$\")"
---
WITH unp AS (
              UNPIVOT (SELECT timestamp, COLUMNS('^cpu_usage/[a-z]+$') FROM _src)
                  ON COLUMNS('^cpu_usage/[a-z]+$')
                  INTO NAME col VALUE v
           ),
           rates AS (
              SELECT timestamp,
                     irate_lag(
                         v,
                         LAG(v) OVER (PARTITION BY col ORDER BY timestamp),
                         timestamp - LAG(timestamp) OVER (PARTITION BY col ORDER BY timestamp)
                     ) AS rate
              FROM unp
           ),
           summed AS (
              SELECT timestamp, SUM(rate) AS s FROM rates GROUP BY timestamp
           )
           SELECT s.timestamp::DOUBLE/1e9 AS t,
                  s.s / NULLIF(c."cpu_cores", 0) / 1e9 AS v
           FROM summed s
              JOIN _src c ON c.timestamp = s.timestamp
